fixed: the form width in IE11 is sometimes too small,
closes https://github.com/kobotoolbox/enketo-express/issues/1072

--- a/app/views/styles/common.scss
+++ b/app/views/styles/common.scss
@@ -72,11 +72,11 @@ progress {
 //IE11 fixes:
 @media all and (-ms-high-contrast: none),
 (-ms-high-contrast: active) {
-    body {
-        height: 100vh;
-    }
+    // Setting the body to 100vh causes a strange issue where some forms are too narrow
+    // until the users clicks inside the form. 
+    // https://github.com/kobotoolbox/enketo-express/issues/1072
+    // As a pragmatic workaround we're just not trying to center the main-loader in IE11.
     .main-loader {
-        //flex-basis: auto;
-        //flex-shrink: 0;
+        margin-top: 200px;
     }
 }
